# oregex

./: .gitignore  README.md  dune-project  oregex.opam
lib/: dune  oregex.ml  oregex.mli  utils.ml  utils.mli
test/: dune  test_runner.ml  tests.ml
